crates/service/tests/hover/snapshots/features__hover__instr__select.snap
---
source: crates/service/tests/hover/instr.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\nselect\n```\n\n**Binary opcode**: `0x1B`\n\n```wat\n[any, any, i32] -> [any]\n```\n\n---\n\n**Stack before**: `[]`"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 9
    },
    "end": {
      "line": 2,
      "character": 15
    }
  }
}
