crates/service/tests/hover/snapshots/features__hover__instr__three_slots_instr_op_code.snap
---
source: crates/service/tests/hover/instr.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\nf64x2.sqrt\n```\n\n**Binary opcode**: `0xFD 0xEF 0x01`\n\n```wat\n[v128] -> [v128]\n```\n\n---\n\n**Stack before**: `[]`"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 11
    },
    "end": {
      "line": 2,
      "character": 21
    }
  }
}
