crates/service/tests/hover/snapshots/features__hover__instr__two_slots_instr_op_code.snap
---
source: crates/service/tests/hover/instr.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\nv128.store\n```\n\n**Binary opcode**: `0xFD 0x0B`\n\n```wat\n[i32, v128] -> []\n```\n\n---\n\n**Stack before**: `[]`"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 11
    },
    "end": {
      "line": 2,
      "character": 21
    }
  }
}
